--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^1.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.1.0",
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
